test/descriptor/seman/corr06.v3
//@seman = DescriptorError @ 6:19
class DA describes A { }
class DB extends DA describes B { }
class A descriptor DA { }
class B extends A descriptor DB { }
class C extends B { }  // error: C must declare a descriptor since B has one
